# nobius

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  notes.txt
ext/PortaSDL2/: SDL_config.h  SDL_revision.h
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
include/: pch.h
include/app/: orchestrator.h
include/core/: base_state.h  base_updater.h  common.h  entity.h  event.h  keycodes.h  layer.h  orchestrator.h  state_tracker.h  ui.h
include/engines/: entity.h
include/render/: renderer.h
include/state/: system_state.h  window_state.h  world_state.h
include/ui/: control_panel.h  debug_register.h  ui.h
include/updaters/: renderer.h  state_updater.h  world_updater.h
src/app/: basic_draw.cpp  imgui_demo.cpp  mouse_tracker.cpp
src/core/: common.cpp  orchestrator.cpp  renderer.cpp  state_tracker.cpp  state_updater.cpp  ui.cpp
src/engines/: entity.cpp
src/render/: renderer.cpp
src/sandbox/: debug_printer.cpp  scripting.cpp
src/ui/: control_panel.cpp  debug_register.cpp
